--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,5 +1,34 @@
 @charset "ISO-8859-1";
 
 body{
-	bakground-color: gray;
+	background-color: #fcfcfa;
+}
+
+.box{
+	over-flow: scroll;
+	text-align: center;
+	width: 350px;
+	height: 250px;
+	box-shadow: 2px 5px 5px -1px rgba(0,0,0,0.5);
+	border-radius: 50px;
+}
+.p-10{
+	padding-top: 8px;
+}
+input[type=email]{
+	height: 25px;
+	font-size: 15px;
+}
+input[type=password]
+{
+	height: 25px;
+	font-size: 15px;
+}
+button{
+	background-color: #0687c7;
+	font-size: 18px;
+	padding: 5px 10px;
+	border-radius: 10px;
+	border: none;
+	color: white;
 }
